--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,9 @@ loader_version=0.14.19-babric.3-bta
 # HalpLibe
 halplibe_version=3.3.3
 
+# DragonFly
+dragonfly_version=1.4.4-7.1
+
 # Mod
 mod_version=0.1
 mod_group=kiryuenjoyer
